feat: graphql linter
